--- a/app/src/main/res/layout/list_address.xml
+++ b/app/src/main/res/layout/list_address.xml
@@ -64,27 +64,37 @@
                 android:textSize="16sp"
                 android:textColor="@color/primary" />
 
+            <TextView
+                android:id="@+id/tvAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Jl. Jurang Blimbing No.04, RT.03/RW.04, Tembalang, Kec. Tembalang"
+                android:textColor="@color/text_secondary"
+                android:textSize="16sp" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:orientation="horizontal"
-                android:layout_marginTop="4dp">
+                android:gravity="center_vertical">
 
                 <TextView
                     android:id="@+id/tvCity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Semarang"
-                    android:textSize="14sp"
-                    android:textColor="@color/text_secondary" />
+                    android:textColor="@color/text_secondary"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:text=" - "
-                    android:textSize="14sp"
-                    android:textColor="@color/text_secondary" />
+                    android:textColor="@color/text_secondary"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/tvProvince"
@@ -92,28 +102,37 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:text="Jawa Tengah"
-                    android:textSize="14sp"
-                    android:textColor="@color/text_secondary"/>
+                    android:textColor="@color/text_secondary"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_weight="1"
+                    android:text=" - "
+                    android:textColor="@color/text_secondary"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tvPostalCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="59563"
+                    android:textColor="@color/text_secondary"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tvAddress"
+                android:id="@+id/tvPhone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Jl. Jurang Blimbing No.04, RT.03/RW.04, Tembalang, Kec. Tembalang"
-                android:textSize="16sp"
+                android:layout_marginTop="8dp"
+                android:text="08123456789"
                 android:textColor="@color/text_secondary"
-                android:layout_marginTop="8dp" />
-
-            <TextView
-                android:id="@+id/tvPostalCode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="59563"
-                android:textSize="16sp"
-                android:textColor="@color/text_secondary"
-                android:layout_marginTop="4dp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
