--- a/app/src/main/res/layout/list_product_cart.xml
+++ b/app/src/main/res/layout/list_product_cart.xml
@@ -24,8 +24,8 @@
 
             <ImageView
                 android:id="@+id/imageViewProduct"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:layout_gravity="center" />
 
             <LinearLayout
@@ -45,33 +45,30 @@
                     android:textSize="16sp"
                     android:maxLength="50"/>
 
-                <TextView
-                    android:id="@+id/tvPrice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="12dp"
-                    android:text="Rp 4.000.000"
-                    android:textStyle="bold"
-                    android:textColor="@color/primary"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center_vertical">
 
-                <TextView
-                    android:id="@+id/tvHargaDiskon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="Rp. 80.000"
-                    android:textColor="@color/text_primary"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintHorizontal_chainStyle="packed"
-                    app:layout_constraintStart_toEndOf="@id/tvPrice"
-                    app:layout_constraintTop_toTopOf="@id/tvPrice"
-                    app:layout_constraintWidth_default="wrap"
-                    tools:ignore="MissingConstraints" />
+                    <TextView
+                        android:id="@+id/tvPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Rp 4.000.000"
+                        android:textColor="@color/primary"
+                        android:textSize="16sp"/>
+
+                    <TextView
+                        android:id="@+id/tvHargaDiskon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="Rp. 80.000"
+                        android:textColor="@color/text_primary"
+                        android:textSize="16sp" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
