--- a/app/src/main/res/layout/list_order_history.xml
+++ b/app/src/main/res/layout/list_order_history.xml
@@ -87,8 +87,10 @@ app:cardElevation="2dp">
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/containerEstimatedDelivery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <TextView
