--- a/app/src/main/res/layout/list_order_history.xml
+++ b/app/src/main/res/layout/list_order_history.xml
@@ -19,7 +19,7 @@ app:cardElevation="2dp">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="8dp">
+        android:layout_marginBottom="4dp">
 
         <TextView
             android:id="@+id/tvOrderNumber"
@@ -40,21 +40,21 @@ app:cardElevation="2dp">
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@color/error"/>
-    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvPaymentStatus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="Payment: Paid" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvOrderDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Date : 12 June 2025" />
+
+    <TextView
+        android:id="@+id/tvPaymentStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Date: 12 June 2025" />
+        android:text="BCA | Paid" />
 
     <!-- Order Summary -->
     <LinearLayout
